chore: switch to hearchco

--- a/src/app.css
+++ b/src/app.css
@@ -27,18 +27,18 @@
     }
 }
 
-.brzaguza-bg-pink, .hover\:brzaguza-bg-pink:hover {
+.hearchco-bg-pink, .hover\:hearchco-bg-pink:hover {
     background-color: #ffc8dd;
 }
 
-.brzaguza-bg-blue, .hover\:brzaguza-bg-blue:hover {
+.hearchco-bg-blue, .hover\:hearchco-bg-blue:hover {
     background-color: #7dd2ed;
 }
 
-.brzaguza-text-pink, .hover\:brzaguza-text-pink:hover {
+.hearchco-text-pink, .hover\:hearchco-text-pink:hover {
     color: #ffc8dd;
 }
 
-.brzaguza-text-blue, .hover\:brzaguza-text-blue:hover {
+.hearchco-text-blue, .hover\:hearchco-text-blue:hover {
     color: #7dd2ed;
 }
